# threadics

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
main/: CHIPProjectConfig.h  CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml  lk_ics2.cpp  lk_ics2.h  matter_device.cpp  matter_device.h
